--- a/style.css
+++ b/style.css
@@ -55,9 +55,9 @@
 }
 
 .restart-btn {
-    background-color: #E9D985;
+    background-color: rgb(90, 193, 207);
     width: 100%;
-    height: 15%;
+    height: 10%;
     text-align: center;
     cursor: pointer;
     font-size: 2rem;
@@ -67,4 +67,19 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.stats {
+    height: 5%;
+    background-color: rgb(58, 154, 167);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.statsChild {
+    flex: auto;
+    font-size: 1.5em;
+    text-align: center;
 }
