--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 .table {
@@ -116,6 +117,7 @@
     transform: scale(1);
     -webkit-transition: all 0.75s cubic-bezier(0.19, 1, 0.22, 1);
     transition: all 0.75s cubic-bezier(0.19, 1, 0.22, 1);
+    font-size: 2.5em;
 }
 
 .win-box {
